fix(css): prevent table css overflows

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -44,3 +44,8 @@ body {
 .wrapper {
   flex:1
 }
+
+.container {
+  width: 95%;
+  max-width: 1500px;
+}
